Change load balancer

--- a/k8s/user-service.yml
+++ b/k8s/user-service.yml
@@ -8,7 +8,7 @@ spec:
   ports:
     - port: 8081
       targetPort: 8081
-  type: LoadBalancer
+  # type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
