--- a/k8s/auth-service.yml
+++ b/k8s/auth-service.yml
@@ -8,7 +8,7 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
-  type: LoadBalancer
+  # type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
